fix: add padding to FeedItem and UserDetails for improved spacing

--- a/src/components/FeedItem/FeedItem.css
+++ b/src/components/FeedItem/FeedItem.css
@@ -19,6 +19,7 @@
 
 .feed-item-main-section > p {
   width: 66.875rem;
+  padding-inline: 1.5rem;
 }
 
 .post-images {
