--- a/src/components/FeedItem/UserDetails/UserDetails.css
+++ b/src/components/FeedItem/UserDetails/UserDetails.css
@@ -4,6 +4,8 @@
   flex-direction: row;
   justify-content: start;
   gap: 0.5rem;
+  padding-inline: 1.5rem;
+  padding-top: 1.5rem;
 }
 
 .user-details-main-section > img {
